--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "license": "BSD-3-Clause",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint-formatter-pretty": "^0.2.2",
     "grunt": "^1.0.1",
     "grunt-eslint": "KK578/grunt-eslint",
+    "grunt-mocha-test": "^0.13.2",
     "jit-grunt": "^0.10.0",
     "load-grunt-config": "^0.19.2",
+    "mocha": "^3.1.2",
     "time-grunt": "^1.4.0"
   }
 }
