Split classes into own files

--- a/uml-annotator/UmlAnnotator.csproj
+++ b/uml-annotator/UmlAnnotator.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="OclCondition.cs" />
+    <Compile Include="UmlClassNode.cs" />
+    <Compile Include="UmlMethodNode.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
