--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ### Project ###
 .env
 .cache/
-tmp/
+[Tt]mp/
 build/
 
 ## Dependencies
@@ -19,10 +19,12 @@ bower[-_]components/
 [Oo]bj/
 [Bb]in/
 [Dd]ebug/
-typings/
 
 ## NodeJS Tools for Visual Studio
 *.njsproj
+
+## Visual Studio Code
+typings/
 
 ## Vim
 # Swap Files
@@ -48,4 +50,4 @@ ehthumbs.db
 
 #############
 ### Misc. ###
-.[tT][mM][pP]
+*.[Tt][Mm][Pp]
