--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "email": "KevinKwan@googlemail.com"
   },
   "license": "BSD-3-Clause",
+  "dependencies": {
+    "glob": "^7.1.1",
+    "xml2js": "^0.4.17",
+    "yeoman-generator": "^0.24.1"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint-formatter-pretty": "^0.2.2",
@@ -16,8 +21,5 @@
     "load-grunt-config": "^0.19.2",
     "mocha": "^3.1.2",
     "time-grunt": "^1.4.0"
-  },
-  "scripts": {
-    "postinstall": "node scripts/install.js"
   }
 }
