--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "eslint-formatter-pretty": "^0.2.2",
     "grunt": "^1.0.1",
     "grunt-eslint": "KK578/grunt-eslint",
+    "grunt-mocha-istanbul": "^5.0.2",
     "grunt-mocha-test": "^0.13.2",
+    "istanbul": "^0.4.5",
     "jit-grunt": "^0.10.0",
     "load-grunt-config": "^0.19.2",
     "mocha": "^3.1.2",
