--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ cache:
     - node_modules
 install:
   - npm install
-  - npm install -g grunt-cli
+  - npm install -g grunt-cli codecov
 before_script:
   - grunt lint
 script:
-  - grunt mochaTest:all
+  - grunt mocha_istanbul:all
+after_success:
+  - codecov
