--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "eslint-formatter-pretty": "^0.2.2",
     "grunt": "^1.0.1",
     "grunt-eslint": "KK578/grunt-eslint",
