--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "load-grunt-config": "^0.19.2",
     "mocha": "^3.1.2",
     "time-grunt": "^1.4.0",
+    "yeoman-assert": "^2.2.2",
     "yeoman-test": "^1.6.0"
   }
 }
