Debug commands in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
   - wget -q https://github.com/Z3Prover/z3/releases/download/z3-4.5.0/z3-4.5.0-x86-ubuntu-14.04.zip
   - unzip -q z3-4.5.0-x86-ubuntu-14.04.zip
   - export PATH=$PATH:$PWD/z3-4.5.0-x86-ubuntu-14.04/bin
+  - echo $PATH
+  - which z3
 before_script:
   - grunt lint
 script:
