--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "glob": "^7.1.1",
+    "parsey": "^0.2.0",
     "xml2js": "^0.4.17",
     "yeoman-generator": "^0.24.1"
   },
