--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "glob": "^7.1.1",
     "parsey": "^0.2.0",
+    "uuid": "^3.0.1",
     "xml2js": "^0.4.17",
     "yeoman-generator": "^1.0.0"
   },
