--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,20 @@
 coverage:
+  precision: 2
+  range: 70..100
+  round: up
+
+  status:
+    project:
+      default:
+        target: 70%
+        threshold: null
+        base: auto
+
   parsers:
     javascript:
       enable_partials: yes
+
+comment:
+  layout: "header, diff"
+  behavior: "new"
+  require_changes: false
