--- a/.editorconfig
+++ b/.editorconfig
@@ -12,11 +12,12 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{*.json,*.yml}]
+[{*.md,*.json,*.yml}]
 indent_style = space
 indent_size = 2
+
+[{*.json,*.yml}]
 end_of_line = lf
 
 [*.md]
-indent_size = 2
 trim_trailing_whitespace = false
