--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai-as-promised": "^6.0.0",
     "eslint-formatter-pretty": "^0.2.2",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-eslint": "KK578/grunt-eslint",
     "grunt-mocha-istanbul": "^5.0.2",
     "grunt-mocha-test": "^0.13.2",
