--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "eslint-formatter-pretty": "^0.2.2",
+    "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-mocha": "^4.8.0",
     "grunt": "^1.0.1",
     "grunt-eslint": "KK578/grunt-eslint",
