--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-formatter-pretty": "^0.2.2",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-mocha": "^4.8.0",
+    "eslint-plugin-no-loops": "^0.3.0",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-eslint": "KK578/grunt-eslint",
