[linux] Enforce CRLF everywhere

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,8 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-*			text=auto
-
-###############################################################################
-# Line endings to work in CI.
-###############################################################################
-*.js		text eol=crlf
+.*			text=auto eol=crlf
+*			text=auto eol=crlf
 
 ###############################################################################
 # Behavior for image files
