Revert "Optional preconditions"

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,12 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-.*			text=auto eol=crlf
-*			text=auto eol=crlf
+*			text=auto
+
+###############################################################################
+# Line endings to work in CI.
+###############################################################################
+*.js		text eol=crlf
 
 ###############################################################################
 # Behavior for image files
