[staging] Fix JavaScript partial line coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - grunt coverage
 after_script:
   - grunt clean
-  - codecov --disable=gcov
+  - codecov --disable=gcov -f coverage/coverage.json
