--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "commander": "^2.9.0",
     "glob": "^7.1.1",
     "parsey": "^0.2.0",
     "uuid": "^3.0.1",
