--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   ],
   "dependencies": {
     "commander": "^2.9.0",
-    "glob": "^7.1.1",
     "parsey": "^0.2.0",
     "uuid": "^3.0.1",
     "xml2js": "^0.4.17",
+    "yeoman-environment": "^1.6.6",
     "yeoman-generator": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "eslint-formatter-pretty": "^0.2.2",
+    "eslint-formatter-pretty": "^1.1.0",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-no-loops": "^0.3.0",
